v0.9
- MANTA-20 preliminary work on this branch allows assembly skip and control of
min indel candidate size and min indel score size
- MANTA-33 reduce SV graph ram requirement to ~1/3 of its previous value, increase all post-merge
task memory requests.
- MANTA-17 merged shadow reads into assembly and adjusted assembly
parameters. Large (50+ base) insertion sensitivity improves by ~.35-.4 as a
result.
- Improvements to vcf output and cmake build.
v0.8
- MANTA-28 Add prototype discovery/local-assembly of small events down to 10 bases 
- MANTA-24 Better handle very high depth and chimeric noise complexity based
on BWA-mem FFPE examples
- MANTA-26 Extend fragment stats to provide estimate of full fragment size
distribution
- Large event assembly fixes
- MANTA-23 enable use of pre-existing depth and stats files (for sparse bams)
v0.7
- Add assembly of large-event breakends and basepair resolution SV reporting
- MANTA-19 Correctly parse large deletion reads from Isaac and incorporate this into
discovery
v0.6
Fix sensitivity problems caused by unexpected proper pair bit settings, fix
several self-edge issues. Detect intrachrom variants down to ~2kb.
v0.5
Expand POC calls to include intrachromosomal variants down to ~5kb.
Minor modifications to method based on FFPE testing.
v0.4
POC somatic transloc output
v0.3
POC translation of graph into candidate transloc vcf
v0.2
working proof of concept denoised sv locus graph
v0.1
initial prototype code tag